--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "typescript": "^5.6.3"
   }
 }
