--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "normalize": "node scripts/normalize-exhibitions.js",
     "seed": "ts-node --transpile-only prisma/seed.ts",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.5.6",
     "@prisma/client": "^5.22.0",
     "autoprefixer": "^10.4.20",
     "dotenv": "^17.2.3",
@@ -36,6 +38,7 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.4",
     "ts-node": "^10.9.2",
